[package]
name = "fedisend"
version = "0.1.0"
authors = ["Conor Randall <ibrokemypie@bastardi.net>"]
repository = "https://github.com/ibrokemypie/fedisend"
license = "Apache-2.0"
readme = "README.md"
description = "simple rust lib to send notes to the fediverse"

[dependencies]
reqwest = "~0.9"
json = "~0.11"
url = "~1.7"
blake2 = "~0.8"